-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.0, 6.6.0
-
f03a9839b (dev), 27beeb7cc (6.6), a4cc75c3b (tqtc/lts-6.5)
ListView orientation switching at run-time doesn't seem to work very well. When switching the orientation runtime it does not seem to re-position the delegate objects. Initially you can swipe in one direction and then when you switch the orientation, swiping goes in the desired orientation but the delegate objects have disappeared.
To reproduce, please run the attached example project.
| For Gerrit Dashboard: QTBUG-115696 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 518987,7 | ListView: position delegate items at zero on the inactive axis | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 519593,2 | ListView: position delegate items at zero on the inactive axis | 6.6 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 519603,2 | ListView: position delegate items at zero on the inactive axis | tqtc/lts-6.5 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |